[WIP] Update parent project, cookbook tests